--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "express": "^4.19.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "vercel": "^33.6.1"
   }
 }
